WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299051
[Site Isolation] Translation does not work for images in cross-site iframes
https://bugs.webkit.org/show_bug.cgi?id=299051
Summary
[Site Isolation] Translation does not work for images in cross-site iframes
rupin
Reported
2025-09-17 15:47:15 PDT
[Site Isolation] Translation does not work for images in cross-site iframes
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-09-17 15:47:23 PDT
<
rdar://problem/160809446
>
rupin
Comment 2
2025-09-17 16:06:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50895
EWS
Comment 3
2025-09-18 16:38:23 PDT
Committed
300199@main
(8943706e7394): <
https://commits.webkit.org/300199@main
> Reviewed commits have been landed. Closing PR #50895 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug