Source/WebCore/page/ImageAnalysisQueue.h
@@ -42,7 +42,7 @@ class HysteresisActivity;
 
 namespace WebCore {
 
-class Document;
+class Frame;
 class HTMLImageElement;
 class Page;
 class Timer;
@@ -54,7 +54,7 @@ public:
     static Ref<ImageAnalysisQueue> create(Page&);
     WEBCORE_EXPORT ~ImageAnalysisQueue();
 
-    WEBCORE_EXPORT void enqueueAllImagesIfNeeded(Document&, const String& sourceLanguageIdentifier, const String& targetLanguageIdentifier);
+    WEBCORE_EXPORT void enqueueAllImagesIfNeeded(Frame&, const String& sourceLanguageIdentifier, const String& targetLanguageIdentifier);
     void clear();
 
     void enqueueIfNeeded(HTMLImageElement&);
@@ -68,7 +68,7 @@ private:
     void resumeProcessingSoon();
     void resumeProcessing();
 
-    void enqueueAllImagesRecursive(Document&);
+    void enqueueAllImagesRecursive(Frame&);
 
     enum class Priority : bool { Low, High };
     struct Task {
